RESOLVED FIXED61393
[Qt] Fix fast/events/selectstart-by-single-click-with-shift.html
https://bugs.webkit.org/show_bug.cgi?id=61393
Summary [Qt] Fix fast/events/selectstart-by-single-click-with-shift.html
Robert Hogan
Reported 2011-05-24 14:04:21 PDT
[Qt] Fix fast/events/selectstart-by-single-click-with-shift.html
Attachments
Patch (5.40 KB, patch)
2011-05-24 14:14 PDT, Robert Hogan
rniwa: review+
Robert Hogan
Comment 1 2011-05-24 14:14:45 PDT
Ryosuke Niwa
Comment 2 2011-05-24 14:16:35 PDT
Comment on attachment 94684 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=94684&action=review > LayoutTests/ChangeLog:6 > + https://bugs.webkit.org/show_bug.cgi?id=61393 > + > + [Qt] Fix fast/events/selectstart-by-single-click-with-shift.html Please fix this before you land.
Robert Hogan
Comment 3 2011-05-24 15:00:32 PDT
Note You need to log in before you can comment on or make changes to this bug.