2011-05-24  Robert Hogan  <robert@webkit.org>

Reviewed by Ryosuke Niwa.

        [Qt] Fix fast/events/selectstart-by-single-click-with-shift.html
        https://bugs.webkit.org/show_bug.cgi?id=61393

        * platform/qt/Skipped: Unskip fast/events/selectstart-by-single-click-with-shift.html
2011-05-24  Robert Hogan  <robert@webkit.org>

        Reviewed by Ryosuke Niwa.

        [Qt] Fix fast/events/selectstart-by-single-click-with-shift.html
        https://bugs.webkit.org/show_bug.cgi?id=61393

        * DumpRenderTree/qt/EventSenderQt.h:
        * DumpRenderTree/qt/EventSenderQt.cpp:
        (getModifiers): static function for interpreting modifiers
        (EventSender::mouseDown): Respect keyboard modifiers
        (EventSender::keyDown): use new static function
        (EventSender::sendOrQueueEvent): whitespace fix

Canonical link: https://commits.webkit.org/76784@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87210 268f45cc-cd09-0410-ab3c-d52691b4dbfc